- Fixed a bug that cause 404 error page when importing students to school
- Added Staff absence report
- Added validation rule to prevent user from adding spaces when changing passwords
- Added Student Teacher ratio report and Student Class ratio report under Reports -> Institutions
- Improved UI when entering data for Institutions -> Visits

v3.4.8
- Added new feature to Undo a student status. This feature can be accessible in Institutions -> Students -> Undo
- Fixed a bug that caused classes and subjects information not removed when the student is removed from the grade in a school
- Fixed a bug that caused 404 error page when accessing Student Behaviors

v3.4.7
- Enabled the Health module for Users
- Administrative Boundaries can now be deleted and reassociate with another record
- Fixed a bug that caused permissions (All Classes, My Classes) not working correctly
- Added Area codes to Institution Reports
- Added Map under Reports to show the location of all Institutions with a valid longitude and latitude
- Fixed a bug that caused a repair popup prompt to appear when downloading reports
- During promotion/graduation, user will be able to review the changes in a confirmation page before proceeding with the actual operation

v3.4.6
- Fixed a bug that caused Institution column in Directory for Staff not displaying any information
- Fixed a bug that caused Institution Listing to display same school in every page for a non-admin user
- Mini dashboards are now reflecting the correct values in charts when user searches or selected options from the filters
- Staff and Student reports are showing complete information now
- After importing records, there is a 'Download Successful Records' button available for the users

v3.4.5
- Fixed a bug that caused 404 error page when saving area administrative in institutions
- Fixed a bug that caused user not able to see the roles when adding users into groups